fix ssl certificate alignment

--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -1,5 +1,5 @@
 #footer{
-  padding: 100px;
+  padding: 100px 100px 50px 100px;
   background: #e8e8e8;
   .social-container{
     // text-decoration: none;
@@ -31,6 +31,10 @@
     text-align: center;
     text-transform: capitalize;
     color: $greyText;
+    margin-bottom: 2rem;
+  }
+  .sslcert{
+    text-align: center;
   }
 }
 
